<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:background="@drawable/shadow">
    <LinearLayout
        android:id="@+id/sport_category_list_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sport_category_list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sport_category_list_name"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/sport_category_list_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/sport_category_list_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/sport_category_list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/sport_category_list_date"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/sport_category_list_linear"
        android:layout_marginLeft="80dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sport_category_list_date"
        android:layout_marginTop="10dp"
        android:text="@string/sport_category_list_price"
        android:textColor="#FF0000"
        android:layout_toRightOf="@+id/sport_category_list_linear"
        android:layout_marginLeft="100dp"/>

</RelativeLayout>
