<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/personal_info"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/per_info_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/arrow_left" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/per_info_head"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_marginTop="30dp"
            android:src="@drawable/head"/>
        <TextView
            android:id="@+id/per_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="10pt"
            android:layout_toRightOf="@+id/per_info_head"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/per_edit_id"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_toRightOf="@+id/per_text_id"
            android:hint="@string/id_hint"
            android:textSize="9pt"
            android:layout_marginTop="30dp"
            android:singleLine="true"
            android:editable="true"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/conner_shape" />
        <TextView
            android:id="@+id/per_text_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signature"
            android:textSize="10pt"
            android:layout_toRightOf="@+id/per_info_head"
            android:layout_below="@+id/per_text_id"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/per_edit_sig"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_toRightOf="@+id/per_text_signature"
            android:layout_below="@+id/per_edit_id"
            android:hint="@string/signature_hint"
            android:textSize="9pt"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:editable="true"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/conner_shape" />


    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#8f8f8f"
        android:layout_marginTop="200dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="@string/phone_number"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
            <EditText
                android:id="@+id/per_edit_num"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="9pt"
                android:layout_marginRight="20dp"
                android:hint="@string/enter_phone_number_hint"
                android:singleLine="true"
                android:editable="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/conner_shape"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#8f8f8f"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="@string/email"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
            <EditText
                android:id="@+id/per_edit_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="9pt"
                android:layout_marginRight="20dp"
                android:hint="@string/email_hint"
                android:singleLine="true"
                android:editable="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/conner_shape"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#8f8f8f"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="@string/modify_pwd"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:id="@+id/per_goto_pw"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="220dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/arrow_left"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#8f8f8f"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp">
        <Button
            android:id="@+id/per_info_save"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/conner_shape"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/commit_modify"
            android:textSize="10pt"/>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
